syntax = "proto3";

package raft;

option go_package = "github.com/jmsadair/keychain/proto/raft";

import "google/protobuf/timestamp.proto";

service RaftService {
  rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse) {}
  rpc AppendEntriesPipeline(stream AppendEntriesRequest) returns (stream AppendEntriesResponse) {}
  rpc RequestVote (RequestVoteRequest) returns (RequestVoteResponse) {}
  rpc RequestPreVote (RequestPreVoteRequest) returns (RequestPreVoteResponse) {}
  rpc InstallSnapshot (stream InstallSnapshotRequest) returns (InstallSnapshotResponse) {}
  rpc TimeoutNow (TimeoutNowRequest) returns (TimeoutNowResponse) {}
}

message AppendEntriesRequest {
  RpcHeader rpc_header = 1;
  uint64 term = 2;
  bytes leader = 3;
  uint64 prev_log_entry = 4;
  uint64 prev_log_term = 5;
  uint64 leader_commit_index = 6;
  repeated Log entries = 7;
}

message AppendEntriesResponse {
  RpcHeader rpc_header = 1;
  uint64 term = 2;
  uint64 last_log = 3;
  bool success = 4;
  bool no_retry_backoff = 5;
}

// RequestPreVoteRequest is the command used by a candidate to ask a Raft peer for a vote in an election.
message RequestPreVoteRequest {
  RpcHeader rpc_header = 1;
  uint64 term = 2;
  uint64 last_log_index = 3;
  uint64 last_log_term = 4;
}

// RequestPreVoteResponse is the response returned from a RequestPreVoteRequest.
message RequestPreVoteResponse {
  RpcHeader rpc_header = 1;
  uint64 term = 2;
  bool granted = 3;
}

message RequestVoteRequest {
  RpcHeader rpc_header = 1;
  uint64 term = 2;
  bytes candidate = 3;
  uint64 last_log_index = 4;
  uint64 last_log_term = 5;
  bool leadership_transfer = 6;
}

message RequestVoteResponse {
  RpcHeader rpc_header = 1;
  uint64 term = 2;
  bytes peers = 3;
  bool granted = 4;
}

message InstallSnapshotRequest {
  RpcHeader rpc_header = 1;
  int32 snapshot_version = 2;
  uint64 term = 3;
  bytes leader = 4;
  uint64 last_log_index = 5;
  uint64 last_log_term = 6;
  bytes peers = 7;
  bytes configuration = 8;
  uint64 configuration_index = 9;
  int64 size = 10;
  bytes data = 11;
}

message InstallSnapshotResponse {
  RpcHeader rpc_header = 1;
  uint64 term = 2;
  bool success = 3;
}

message TimeoutNowRequest {
  RpcHeader rpc_header = 1;
}

message TimeoutNowResponse {
  RpcHeader rpc_header = 1;
}

message Log {
  uint64 index = 1;
  uint64 term = 2;
  uint32 type = 3;
  bytes data = 4;
  bytes extensions = 5;
  google.protobuf.Timestamp appended_at = 6;
}

message RpcHeader {
  int32 protocol_version = 1;
  bytes id = 2;
  bytes addr = 3;
}

message Peer {
  string server_id = 1;
  string server_address = 2;
}
